styles/base.css
nav {
    background-color: black;
    padding: 1rem;
    display:flex;
    justify-content: space-around;
    
  }
nav a{
      color:white;
      padding: 0.5rem;
      display: block;
      text-decoration: none;
  }
nav a:hover{
  color: black;
  background-color: white;
}

  
  
  header {
    padding: 2rem;
    grid-column: 1 / 4;
    background-color: grey;
    text-align: center;
  }
  main{
    display: grid;
    grid-template-columns: 1fr;
    gap: 20px;
    max-width: 300;
    padding: 20px;
    
  }
  .card-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 20px;
  }
  
  .card-item1 {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 50px 150px 100px 50px;
    grid-gap: 10px;
    border: 1px solid #ddd;
    width: 960px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  }
  .card-item2 {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 50px 150px 100px 50px;
    grid-gap: 10px;
    border: 1px solid #ddd;
    width: 300px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  }
  
  .card-header {
  
    grid-column: 1/3;
    background-color: #f2f2f2;
    padding: 10px;
    
    
  }
  
  .card-image {
   
   grid-column: 3/3;
   background-size: cover;
   background-position: center;
   align-content: right;
   display: flex;
  }
  .aboutMe{
    grid-column: 1/3;
    text-align: left;
  }
  .aboutSA{
    text-align: left;
  }
  
  .card-content {
    grid-column: 1;
    padding: 20px;
  }
  footer {
    grid-column: 1 / 4;
    background-color: grey;
    padding: 20px;
    text-align: center;
  }

